--- a/Untitled.html
+++ b/Untitled.html
@@ -1,7 +1,8 @@
+
 <div class="container">
   <nav class="row">
     <div class="nav-wrapper">
-      <span class="brand-logo center">{{  config?.['title'] | uppercase }}</span>
+      <span class="brand-logo center">{{ config?.title | uppercase }}</span>
     </div>
   </nav>
 
@@ -39,13 +40,15 @@
 
   <h1>Dzisiaj brak zadań :-)</h1>
 
-  <button class="btn red">Wyczyść</button>
+  <button class="btn blue">Wyczyść</button>
 
   <footer class="page-footer mt-5">
     <div class="footer-copyright">
       <div class="container">
-        {{ config?['date'] | date: 'yyyy' }} {{ config?.footer }}
+       {{ config?.date | date: 'yyyy' }} {{ config?.footer }}
       </div>
     </div>
   </footer>
+
+  </div>
 </div>
